<resources>
    <string name="app_name">Snake</string>
    <string name="title_activity_main">Type-a-Number Challenge</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="achievements_exception">There was an issue communicating with achievements.</string>
    <string name="leaderboards_exception">There was an issue communicating with leaderboards.</string>
    <string name="players_exception">There was an issue communicating with players.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>

    <string name="easy_mode_explanation">It was easy ;)</string>
    <string name="medium_mode_explanation">Not so easy, isn\'t it ?</string>
    <string name="hard_mode_explanation">It was pretty hard, isn\'t it ?</string>

    <string name="achievement_10_apple_toast_text">You ate 10 apples in on game on this level, congratulations !</string>
    <string name="achievement_p10_board_toast_text">Your snake has filled 10% of the entire game board, congratulations !</string>
    <string name="achievement">Achievement</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="choose_difficulty">Choose a difficulty to play:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="settings">Settings</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show Leaderboards</string>
    <string name="show_friends">Show Friends</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="you_win">You loose! Your score is:</string>
    <string name="ok">OK</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="friends_title">Friends</string>
    <string name="back">Back</string>

    <string name="colorBorder">Border color</string>
    <string name="colorGrid">Grid color</string>
    <string name="colorHead">Head color</string>
    <string name="colorBody">Body color</string>
    <string name="colorBackground">Background color</string>

    <string name="hasBorder">Border</string>
    <string name="hasGrid">Grid</string>
    <string name="sensitivity">Sensitivity</string>

    <string name="fun_mode">
        Fun mode\n
        If you change the settings, your scores will not be saved.
    </string>
    <string name="fruits_chance">Chance for banana: 1/</string>
    <string name="defaultChanceForBanana">0</string>
    <string name="number_fruits">Number of fruits\non board</string>
    <string name="defaultNumberOfFruits">1</string>
    <string name="reset_fun_mode">Reset</string>
    <string name="friends_icon">Friends icon</string>


</resources>