<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/screen_menu"
    android:gravity="center">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:textColor="#ffffff"
        android:background="#d54937" />

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="20dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/text_greeting" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_difficulty"
            android:layout_marginBottom="20dp" />

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button android:id="@+id/easy_mode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:layout_marginEnd="20dp" />

            <Button android:id="@+id/medium_mode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:layout_marginEnd="20dp" />

            <Button android:id="@+id/hard_mode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:layout_marginEnd="20dp" />

        </LinearLayout>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_your_progress"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_achievements"
            android:layout_marginBottom="20dp"
            android:id="@+id/show_achievements_button" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_leaderboards"
            android:layout_marginBottom="20dp"
            android:id="@+id/show_leaderboards_button" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_friends"
            android:id="@+id/show_friends_button" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sign_in_bar"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_why"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#808080" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sign_out_bar"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center|end"
        android:padding="10dp">

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/you_are_signed_in"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#808080" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
