<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/settings_ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/colorSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/border_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/colorBorder"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/border_color_SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:max="360"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/border_textView" />

                <TextView
                    android:id="@+id/grid_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/colorGrid"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/border_color_SeekBar" />

                <SeekBar
                    android:id="@+id/grid_color_seekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:max="360"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/grid_textView" />

                <TextView
                    android:id="@+id/head_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/colorHead"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/grid_color_seekBar" />

                <SeekBar
                    android:id="@+id/head_color_seekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:max="360"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/head_textView" />

                <TextView
                    android:id="@+id/body_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/colorBody"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/head_color_seekBar" />

                <SeekBar
                    android:id="@+id/body_color_seekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:max="360"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/body_textView" />

                <TextView
                    android:id="@+id/background_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/colorBackground"
                    android:textSize="20sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/body_color_seekBar" />

                <SeekBar
                    android:id="@+id/background_color_SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:max="360"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background_textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gameSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/border_settings_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/hasBorder"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/hasBorder_toggle"
                    app:layout_constraintEnd_toEndOf="@+id/sensitivity_settings_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ToggleButton
                    android:id="@+id/hasBorder_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/sensitivity_settings_textView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/grid_settings_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/hasGrid"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/hasGrid_toggle"
                    app:layout_constraintEnd_toEndOf="@+id/sensitivity_settings_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/hasGrid_toggle" />

                <ToggleButton
                    android:id="@+id/hasGrid_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/sensitivity_settings_textView"
                    app:layout_constraintTop_toBottomOf="@+id/hasBorder_toggle"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sensitivity_settings_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sensitivity"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hasGrid_toggle" />

                <SeekBar
                    android:id="@+id/sensitivitySeekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:max="40"
                    android:tag="@string/sensitivity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sensitivity_settings_textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fun_mode_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/fun_mode_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fun_mode"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fruits_chance_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fruits_chance"
                    app:layout_constraintBottom_toBottomOf="@+id/fruits_chance_editTextNumber"
                    app:layout_constraintEnd_toStartOf="@+id/fruits_chance_editTextNumber"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fruits_chance_editTextNumber" />

                <EditText
                    android:id="@+id/fruits_chance_editTextNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints=""
                    android:ems="2"
                    android:gravity="center"
                    android:hint="@string/defaultChanceForBanana"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toStartOf="@+id/reset_fun_mode"
                    app:layout_constraintTop_toBottomOf="@+id/fun_mode_textView" />

                <TextView
                    android:id="@+id/nbrFruits_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_fruits"
                    app:layout_constraintBottom_toBottomOf="@+id/nbrFruits_editTextNumber"
                    app:layout_constraintEnd_toStartOf="@+id/nbrFruits_editTextNumber"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/nbrFruits_editTextNumber" />

                <EditText
                    android:id="@+id/nbrFruits_editTextNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints=""
                    android:ems="2"
                    android:gravity="center"
                    android:hint="@string/defaultNumberOfFruits"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/reset_fun_mode"
                    app:layout_constraintTop_toBottomOf="@+id/fruits_chance_editTextNumber" />

                <Button
                    android:id="@+id/reset_fun_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/reset_fun_mode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fruits_chance_editTextNumber" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/settings_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>